[gd_scene load_steps=8 format=2]

[ext_resource path="res://Enemy/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Detection/Hurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemy/PlayerDetection.gd" type="Script" id=3]
[ext_resource path="res://Enemy/enemy.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 2.0

[sub_resource type="CircleShape2D" id=2]
radius = 4.0

[sub_resource type="CircleShape2D" id=3]
radius = 20.0998

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 32
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2, -1 )
shape = SubResource( 1 )

[node name="Hurtbox" parent="." instance=ExtResource( 2 )]
position = Vector2( -2, -1 )
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
modulate = Color( 1, 0, 0, 1 )
shape = SubResource( 2 )

[node name="PlayerDetection" type="Area2D" parent="."]
position = Vector2( -2, -1 )
collision_layer = 0
collision_mask = 2
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
modulate = Color( 0.854902, 0.996078, 0.682353, 0.521569 )
shape = SubResource( 3 )

[node name="Sounds" type="AudioStreamPlayer" parent="."]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1, -1 )
rotation = 1.5708
texture = ExtResource( 4 )

[node name="GunSpawnPoint" type="Position2D" parent="."]
position = Vector2( 5, 0 )

[node name="GunAimPoint" type="Position2D" parent="."]
position = Vector2( 6, 0 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="body_entered" from="PlayerDetection" to="PlayerDetection" method="_on_PlayerDetection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="PlayerDetection" method="_on_PlayerDetection_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="Hurtbox"]
